--- a/.env.example
+++ b/.env.example
@@ -21,11 +21,11 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=db
+DB_HOST=sample_db_host
 DB_PORT=3306
-DB_DATABASE=refactorian
-DB_USERNAME=refactorian
-DB_PASSWORD=refactorian
+DB_DATABASE=sample_database
+DB_USERNAME=sample_username
+DB_PASSWORD=sample_password
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
